--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-label{
+label {
   cursor: pointer;
 }
 .container-fluid img {
@@ -80,7 +80,7 @@ label{
   margin-top: 72px;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width: 1440px;
 }
 .photo-review .cards {
   margin: 5px 15px 5px 15px;
@@ -119,8 +119,8 @@ label{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 815px;
+  width: 716px;
+  height: 783px;
   background: white;
   z-index: 2;
 }
@@ -183,7 +183,7 @@ label{
 }
 .modalbox .modal-rightbox {
   width: 85%;
-  padding: 20px 20px 20px 15px;
+  padding: 20px 20px 9px 15px;
   display: flex;
   flex-direction: column;
 }
@@ -221,21 +221,29 @@ label{
   margin-bottom: 15px;
   font-size: 13px;
 }
-.modalbox .modal-rightbox .modal-recommend {
+.modalbox .modal-rightbox .modal-button {
   border-top: 1px solid gray;
   padding-top: 11px;
   color: red;
   font-size: 13px;
   font-weight: 900;
 }
-.modalbox .modal-rightbox .modal-recommend button {
+.modalbox .modal-rightbox .modal-button button:nth-child(2) {
   background-color: red;
   color: white;
   font-size: 10px;
   padding: 1px 10px 1px 10px;
   font-weight: 900;
 }
-.plus button {
+.modalbox .modal-rightbox .modal-button button:nth-child(3),
+.modalbox .modal-rightbox .modal-button button:nth-child(4) {
+  background-color: black;
+  color: white;
+  font-size: 10px;
+  padding: 1px 10px 1px 10px;
+  font-weight: 900;
+}
+.plus > button {
   background-color: black;
   color: white;
   padding: 15px;
@@ -264,18 +272,40 @@ label{
   position: absolute;
   left: 100%; /*왼쪽 붙여주기*/
 }
-#final-box {
+#photo {
+  width: 1440px;
+  min-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#final-box div {
-  width: 30%;
-  position: relative;
+#photo .photo-card {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
 }
-#final-box img {
-  animation: slide 4s ease-out;
+#photo .photo-card > div #popup {
+  display: none;
+}
+#photo .photo-card div:nth-child(1):hover {
+  transform: scale(1.2);
+}
+#photo .photo-card div:nth-child(1) > label > img {
   width: 100%;
-  position: relative;
+  max-height: 1000px;
+}
+#photo .photo-card div:nth-child(1) > div .modalbox {
+  display: none;
+}
+#photo .photo-card div:nth-child(2) {
+  font-size: 20px;
+  font-weight: 900;
+}
+#photo .photo-card div:nth-child(3) {
+  font-size: 12px;
+  color: gray;
 }
 
 .allmenu-list {
